Updated tunnels.conf to include http:// which is now required after latest Firefox update

--- a/tunnels.conf
+++ b/tunnels.conf
@@ -1,2 +1,2 @@
 Location,SSH Hostname,URLs
-example,example.contoso.com,https://firewall.local 10.10.10.10 ipinfo.io/json
+example,example.contoso.com,https://firewall.local http://10.10.10.10 https://ipinfo.io/json
